backend/server_debug.log
/home/laren/ledgermind/venv/lib/python3.14/site-packages/langgraph/checkpoint/base/__init__.py:18: LangChainPendingDeprecationWarning: The default value of `allowed_objects` will change in a future version. Pass an explicit value (e.g., allowed_objects='messages' or allowed_objects='core') to suppress this warning.
  from langgraph.checkpoint.serde.jsonplus import JsonPlusSerializer
Traceback (most recent call last):
  File "/home/laren/ledgermind/venv/bin/uvicorn", line 8, in <module>
    sys.exit(main())
             ~~~~^^
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/click/core.py", line 1569, in __call__
    return self.main(*args, **kwargs)
           ~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/click/core.py", line 1490, in main
    rv = self.invoke(ctx)
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/click/core.py", line 1353, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/click/core.py", line 907, in invoke
    return callback(*args, **kwargs)
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/uvicorn/main.py", line 409, in main
    run(
    ~~~^
        app,
        ^^^^
    ...<45 lines>...
        h11_max_incomplete_event_size=h11_max_incomplete_event_size,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/uvicorn/main.py", line 575, in run
    server.run()
    ~~~~~~~~~~^^
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/uvicorn/server.py", line 65, in run
    return asyncio.run(self.serve(sockets=sockets))
           ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.14/asyncio/runners.py", line 204, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "/usr/lib/python3.14/asyncio/runners.py", line 127, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/uvicorn/server.py", line 69, in serve
    await self._serve(sockets)
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/uvicorn/server.py", line 76, in _serve
    config.load()
    ~~~~~~~~~~~^^
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/uvicorn/config.py", line 433, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/home/laren/ledgermind/venv/lib/python3.14/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "/usr/lib/python3.14/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1406, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1371, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1342, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 938, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 759, in exec_module
  File "<frozen importlib._bootstrap>", line 491, in _call_with_frames_removed
  File "/home/laren/ledgermind/backend/app/main.py", line 8, in <module>
    from app.api.query import router as query_router
  File "/home/laren/ledgermind/backend/app/api/query.py", line 41, in <module>
    from app.engines.graph import get_graph
  File "/home/laren/ledgermind/backend/app/engines/graph.py", line 39, in <module>
    from app.engines.cross_engine import cross_engine_node
  File "/home/laren/ledgermind/backend/app/engines/cross_engine.py", line 29, in <module>
    from app.engines.quant_engine import quant_engine_node
  File "/home/laren/ledgermind/backend/app/engines/quant_engine.py", line 42, in <module>
    from app.engines.router import GEMINI_MODEL
  File "/home/laren/ledgermind/backend/app/engines/router.py", line 246
    if quarter:
SyntaxError: expected 'except' or 'finally' block
